// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`PeopleFilter City filter should generate the where variable of the GQL call 1`] = `
Object {
  "city": Object {
    "_eq": "Paris",
  },
}
`;

exports[`PeopleFilter City filter should generate the where variable of the GQL call 2`] = `
Object {
  "_not": Object {
    "city": Object {
      "_eq": "Paris",
    },
  },
}
`;

exports[`PeopleFilter Company fitler should generate the where variable of the GQL call 1`] = `
Object {
  "company": Object {
    "name": Object {
      "_eq": "ACME",
    },
  },
}
`;

exports[`PeopleFilter Company fitler should generate the where variable of the GQL call 2`] = `
Object {
  "_not": Object {
    "company": Object {
      "name": Object {
        "_eq": "ACME",
      },
    },
  },
}
`;

exports[`PeopleFilter Email filter should generate the where variable of the GQL call 1`] = `
Object {
  "email": Object {
    "_eq": "john@linkedin.com",
  },
}
`;

exports[`PeopleFilter Email filter should generate the where variable of the GQL call 2`] = `
Object {
  "_not": Object {
    "email": Object {
      "_eq": "john@linkedin.com",
    },
  },
}
`;

exports[`PeopleFilter Fullname filter should generate the where variable of the GQL call 1`] = `
Object {
  "_and": Array [
    Object {
      "firstname": Object {
        "_eq": "John",
      },
    },
    Object {
      "lastname": Object {
        "_eq": "Doe",
      },
    },
  ],
}
`;

exports[`PeopleFilter Fullname filter should generate the where variable of the GQL call 2`] = `
Object {
  "_not": Object {
    "_and": Array [
      Object {
        "firstname": Object {
          "_eq": "John",
        },
      },
      Object {
        "lastname": Object {
          "_eq": "Doe",
        },
      },
    ],
  },
}
`;
